hydroflow/tests/compile-fail/surface_demuxenum_wrongenum.stderr
error: Output connection conflicts with below ($DIR/tests/compile-fail/surface_demuxenum_wrongenum.rs:21:18) (1/2)
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:20:18
   |
20 |         my_demux[Square] -> for_each(std::mem::drop);
   |                  ^^^^^^

error: Output connection conflicts with above ($DIR/tests/compile-fail/surface_demuxenum_wrongenum.rs:20:18) (2/2)
  --> tests/compile-fail/surface_demuxenum_wrongenum.rs:21:18
   |
21 |         my_demux[Square] -> for_each(std::mem::drop);
   |                  ^^^^^^

warning: unused import: `var_args`
 --> tests/compile-fail/surface_demuxenum_wrongenum.rs:2:35
  |
2 | use hydroflow::{hydroflow_syntax, var_args};
  |                                   ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
